# jaxmm

./: .gitignore  AGENTS.md  CODEMAP.md  CONTRIBUTING.md  README.md  pyproject.toml
examples/: aldp_potential_jaxmm.ipynb  custom_energy.ipynb  custom_samplers.ipynb  differentiable_md.ipynb  energy_landscape.ipynb  free_energy.ipynb  jaxmm_demo.ipynb  normal_modes.ipynb  parallel_tempering.ipynb  quickstart.ipynb  solvent_comparison.ipynb
jaxmm/: __init__.py  energy.py  extract.py  integrate.py  notebook.py  utils.py
tests/: conftest.py  test_angles.py  test_bonds.py  test_cmap.py  test_dihedral.py  test_extraction.py  test_gbsa.py  test_grad.py  test_integrate.py  test_minimize.py  test_nonbonded.py  test_pbc.py  test_rb_torsions.py  test_restraints.py  test_serialization.py  test_torsions.py  test_total.py
